src/test/deca/context/valid/ContextAvecObjet/DeclFields/typeClassFields.deca
// Description:
//    Déclaration et initialisation de champs de type objet défini
//
// Resultats:
//    ok

class A {}

class B {
    A x;
    Object y;
}