src/test/deca/context/invalid/ContextAvecObjet/DeclClass/circularExtends.deca
// Description
// Déclarations circulaires de classes :A=>B=>C=>A
//
//Résultat
//  Erreur contextuelle ligne 8
//  type non défini

class A extends B{}
class B extends C{}
class C extends A{}